# SoniVerb

./: CMakeLists.txt
plugin/: DistrhoPluginInfo.h  SoniVerb_Plugin.cpp
src/: NOTICE  eas_math.cpp  eas_math.h  eas_reverb.cpp  eas_reverb.h  eas_reverbdata.h  eas_types.h
